--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "immer": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.5.6",
+    "next": "^15.5.9",
     "next-themes": "latest",
     "prisma": "latest",
     "react": "19.2.0",
